# speech-recognition

./: CMakeLists.txt
data/: data.sh  dtw.py  dtw_results.npy  dtw_temp.cpp  max9814.out
dtw/: dtw.cpp  dtw.h
mcff/: mcff.cpp  mcff.h
mcff/fft/: Complex.h
mfcc/: mfcc.cpp  mfcc.h
mfcc/fft/: fft.h
test/dtw/: dtw.py  generate_data.py  implement_dtw.py  py.out  series1.txt  test.out  test.sh  test_dtw.cpp
test/mcff/: mcff.py  test_mcff.cpp
test/mfcc/: data.sh  draw.py  generate_data.py  get_audio.cpp  mfcc.py  save.out  test.out  test.py  test.sh  test_mfcc.cpp
